common comminications and refoctor